# react-native-biometric-login

./: BiometricLogin.podspec  BiometricLoginSpecJSI-generated.cpp  CONTRIBUTING.md  INTEGRATION.md  LICENSE  MIGRATION_GUIDE.md  QUICK_FIX.md  README.md  SWIFT_BRIDGING_HEADER_TROUBLESHOOTING.md  TROUBLESHOOTING.md  eslint.config.mjs  lefthook.yml  package.json  react-native-biometric-login-2.0.18.tgz  react-native-biometric-login-2.0.21.tgz  react-native-biometric-login-2.0.22.tgz  react-native-biometric-login-2.0.23.tgz  react-native-biometric-login-2.0.24.tgz  react-native-biometric-login.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
BiometricLoginSpec/: BiometricLoginSpec-generated.mm  BiometricLoginSpec.h
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/biometriclogin/: BiometricLoginModule.kt  BiometricLoginPackage.kt  CredentialStorage.kt  CryptoManager.kt  User.kt
android/src/main/java/com/reactnativebiometriclogin/: BiometricLoginModule.kt  BiometricLoginPackage.kt  CredentialStore.kt
android/src/main/jni/: CMakeLists.txt
example/: App.js  app.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: _BUCK  build.gradle  my-upload-key.keystore
example/android/app/src/debug/java/com/biotest/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/biometriclogin/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/BiometricLoginExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/BiometricLoginExample.xcodeproj/: project.pbxproj
example/ios/BiometricLoginExample.xcodeproj/xcshareddata/xcschemes/: BiometricLoginExample.xcscheme
example/ios/BiometricLoginExample.xcworkspace/: contents.xcworkspacedata
example/ios/biotest/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/biotest.xcodeproj/: project.pbxproj
example/ios/biotest.xcodeproj/xcshareddata/xcschemes/: biotest.xcscheme
example/ios/biotest.xcworkspace/: contents.xcworkspacedata
example/ios/biotestTests/: biotestTests.m
example/src/: App.tsx
ios/: BiometricLogin.h  BiometricLogin.m  BiometricLogin.mm  BiometricLogin.swift  BiometricLoginImpl.swift  CredentialStore.swift
ios/BiometricLogin.xcodeproj/: project.pbxproj
java/com/facebook/fbreact/specs/: NativeBiometricLoginSpec.java
jni/: BiometricLoginSpec-generated.cpp  BiometricLoginSpec.h  CMakeLists.txt
jni/react/renderer/components/BiometricLoginSpec/: BiometricLoginSpecJSI.h
scripts/: check-setup.js  verify-setup.js
src/: NativeBiometricLogin.ts  index.tsx
(+5 files in other folders)
